--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
     padding: 8px 18px;
     border-radius: 50px;
     font-family: inherit;
-    border: 2px solid #22254b;
+    border: 2px solid #7a7ebd;
     outline: none;
     color: #eeeeee;
 }
